# gms

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindCPLEX.cmake  FindPAPI.cmake
examples/: CMakeLists.txt  triangle_counting.cpp
gms/: CMakeLists.txt
gms/algorithms/non_set_based/: CMakeLists.txt
gms/algorithms/non_set_based/coloring/: CMakeLists.txt  coloring.cc  coloring_barenboim.h  coloring_common.h  coloring_common_barenboim_elkin.h  coloring_dense_sparse.h  coloring_elkin.h  coloring_johansson.h  coloring_jones_v1.h  coloring_jones_v2.h  coloring_jones_v3.h  coloring_jones_v4.h  coloring_sequential.h  random_select.h
gms/algorithms/non_set_based/k_clique_list/: CMakeLists.txt  bench_helper.h  clique_counting.h  k_clique_list_danisch_edge_parallel.cc  k_clique_list_danisch_node_parallel.cc  k_clique_list_danisch_serial.cc
gms/algorithms/non_set_based/k_clique_list/kernels/: kclisting.h
gms/algorithms/non_set_based/k_clique_list/parallelizationStrategy/: SubGraphBuilder.h  SubGraphBuilderWInverse.h  parallelize.h  util.h
gms/algorithms/non_set_based/k_clique_list/verification/: conversion.h  kclisting_original.h  kclisting_original_edgeParallel.h  kclisting_original_nodeParallel.h  verify.h
gms/algorithms/non_set_based/subgraphiso/: CMakeLists.txt
gms/algorithms/non_set_based/subgraphiso/util/: command_line.hpp  result.hpp  subgraphiso_verification.hpp
gms/algorithms/preprocessing/: CMakeLists.txt  README.md  general.h  preprocessing.cc  preprocessing.h  preprocessing_approx_variants.cc
gms/algorithms/preprocessing/parallel/: boundary_function.h  degeneracy_approx_csr.h  degeneracy_approx_set.h  degeneracy_matula.h  degree.h  triangle_count.h
gms/algorithms/preprocessing/sequential/: apply_order.h  degeneracy_danisch.h  degeneracy_matula.h  degree.h  random_ordering.h  simple_id.h
gms/algorithms/preprocessing/util/: OrderedCollection.h  auxiliary.h  core_number_evaluator.h  wrap.h
gms/algorithms/preprocessing/verifiers/: degeneracy_verifier.h  verifiers.h
gms/algorithms/set_based/: CMakeLists.txt
gms/algorithms/set_based/k_clique_count/: CMakeLists.txt  README.md  k_clique_count_set_based.cc  k_clique_count_set_based.h
gms/algorithms/set_based/k_clique_star_list/: CMakeLists.txt  k_clique_star_list.cc  k_clique_star_list.h
gms/algorithms/set_based/k_clique_star_list/parallel/: output.h  recursive.h
gms/algorithms/set_based/k_clique_star_list/sequential/: output.h  recursive.h
gms/algorithms/set_based/k_clique_star_list/verifiers/: valid_kcstar.h
gms/algorithms/set_based/link_prediction/: CMakeLists.txt  edge_sampler.h  evaluation.h  link_prediction.cc  link_prediction.h  undirected_edge.h
gms/algorithms/set_based/maximal_clique_enum/: CMakeLists.txt  README.md  bron_kerbosch.h  general.h  helper.h  maximal_clique_enum_bron_kerbosch.cc  maximal_clique_enum_bron_kerbosch_papiw.cc  maximal_clique_enum_bron_kerbosch_sequential.cc  verifier.h
gms/algorithms/set_based/maximal_clique_enum/parallel/: EppsteinSubGraph.h  EppsteinSubGraphAdaptive.h  eppsteinPAR.h
gms/algorithms/set_based/maximal_clique_enum/sequential/: eppstein.h  simple.h  tomita.h
gms/algorithms/set_based/maximal_clique_enum/sub_graph/: fast_roaring_sub_graph.h  roaring_sub_graph.h  sub_graph.h
gms/algorithms/set_based/triangle_count/: CMakeLists.txt  triangle_count.cc  triangle_count.h  verifier.h
gms/algorithms/set_based/triangle_count/parallel/: total.h  vertex.h
gms/algorithms/set_based/triangle_count/sequential/: total.h  vertex.h
gms/algorithms/set_based/vertex_similarity/: vertex_similarity.h
gms/common/: benchmark.h  conversions.h  detail_timer.h  format.h  pipeline.h  printer.h  types.h
gms/common/cli/: args.h  cli.h  compat.h  parameter.h
gms/common/papi/: README.md  papiw.h  papiw_util.h
gms/representations/graphs/: kbit_graph.h  set_graph.h
gms/representations/graphs/coders/: varint_byte_based_graph.h  varint_word_based_graph.h
gms/representations/graphs/log_graph/: CMakeLists.txt  bc.cc  bfs.cc  bit_tree_bfs.cc  bit_tree_graph.h  bit_tree_neighbourhood.h  cc.cc  converter.cc  kbit_adjacency_array.h  kbit_adjacency_array_local.h  kbit_bc.cc  kbit_bfs.cc  kbit_bfs_prefetching.cc  kbit_cc.cc  kbit_neighbourhood.h  kbit_pr.cc  kbit_sssp.cc  kbit_tc.cc  kbit_weighted_adjacency_array.h  kbit_weighted_adjacency_array_local.h  kbit_weighted_neighbourhood.h  my_bitmap.h  notes.txt  options.h  pr.cc  sssp.cc  tc.cc
gms/representations/graphs/permuters/: in_degree_ascending_permuter.h  in_degree_descending_permuter.h  o_ilp_nn_con_n_permuter.h  o_ilp_nn_un_n_permuter.h  o_ilp_vn_con_n_permuter.h  o_ilp_vn_un_n_permuter.h  optimal_diff_nn_ilp_constr_permuter.h  optimal_diff_nn_ilp_unconstr_permuter.h  optimal_diff_nn_lp_constr_permuter.h  optimal_diff_nn_lp_unconstr_permuter.h  optimal_diff_vn_ilp_constr_permuter.h  optimal_diff_vn_ilp_unconstr_permuter.h  optimal_diff_vn_lp_constr_permuter.h  optimal_diff_vn_lp_unconstr_permuter.h  out_degree_ascending_permuter.h  out_degree_descending_permuter.h  permuters.h
gms/representations/sets/: roaring_set.h  robin_hood_set.h  sorted_set.h  sorted_set_operations.h  sorted_set_ref.h
scripts/: collectData.bash  plotmaker.py  plotmaker_old.py  run_config.json  scriptmaker.py
testing/: CMakeLists.txt  README.md  bron_kerbosch.cpp  cgraph.cpp  clique_counting.cpp  coders.cpp  set_graph.cpp  sets.cpp  test_helper.h
testing/clique_counting/: CliqueCounter2_tests.h  CliqueCounterEdgeParallel_tests.h  CliqueCounterNodeParallel_tests.h  CliqueCounterPath_tests.h  CliqueCounterSubGraphPP_tests.h  CliqueCounterSubGraph_tests.h  CliqueCounter_tests.h  Comparer_unittest.h  SortedDictArray_unittest.h  SubGraphBuilder_tests.h  TrackingBubblingArray_tests.h  TrackingHeap_tests.h  UCLApp.h  builder_tests.h  conversion_tests.h  graphordering_unittest.h  includes.h  kClist_tests.h
testing/link_prediction/: edge_sampler.cc
testing/preprocessing/: degeneracy_order_tests.h  preprocessing.cpp
testing/testGraphs/: eppsteinExample.el  micro.el  smallRandom1.el  tomitaExample.el  triangles_3.el
(+8 files in other folders)
